--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory.txt playbook.yml
+            ansible-playbook -i /root/project/.circleci/inventory.txt /root/project/.circleci/playbook.yml
 
 workflows:
   my_workflow:
