--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,18 @@
+version: 2.1
 
+jobs:
+  create_infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Ensure backend infrastructure exist
+          command: |
+            aws cloudformation deploy \
+              --template-file template.yml \
+              --stack-name my-stack --region ap-south-1
+workflows:
+  my_workflow:
+    jobs:
+      - create_infrastructure
