--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           name: Ensure backend infrastructure exist
           command: |
             aws cloudformation deploy \
-              --template-file template.yml \
+              --template-file file://~/project/template.yml \
               --stack-name my-stack --region ap-south-1
 workflows:
   my_workflow:
