--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,9 @@
  - name: Copy using the 'content' for inline data
    hosts: all
    tasks:
-    - copy:
-       content: '# This file was moved to /Users/machd/ansible by kadhir'
-       dest: '/home/ubuntu/msg.txt' 
+    - name: Create a new file with permissions
+     file:
+      path: "/root"
+      state: touch
+      mode: 0755
+      owner: root
