--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,9 @@
 ---
- - name: Copy using the 'content' for inline data
-   hosts: all
-   tasks:
-     - name: Create a new file with permissions
-        file:
-          path: "/root"
-          state: touch
-          mode: 0755
-          owner: root
+
+- hosts: all
+  tasks:
+  - name: Create a new file with permissions
+    file:
+      path: "/home"
+      state: touch
+      mode: 0755
