--- a/playbook.yml
+++ b/playbook.yml
@@ -5,3 +5,7 @@
    - debug:
       msg:
       - "Provisioning based on"
+   - copy:
+      name: 'copy files'
+      content: '# This file was moved to /Users/machd/ansible by kadhir'
+      dest: '/home/ubuntu/msg.txt'
